apps/lab/vaultwarden/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    link.argocd.argoproj.io/external-link: https://vault.lab.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - vault.lab.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: vaultwarden
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-public
  namespace: vaultwarden
  annotations:
    link.argocd.argoproj.io/external-link: https://vault.ciliber.to
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - vault.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: vaultwarden
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
